--- a/Desenho das estruturas diagramáticas.html
+++ b/Desenho das estruturas diagramáticas.html
@@ -5,7 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+        margin-right: 100px;
+       
+    }
+</style>
 <body>
-    
+<body>
+<center><h1 style="color:Tomato;">Diagrama de Venn:</h1></center>
+<h2>Utilizado para representar as relações entre conjuntos. Por exemplo, se A e B são conjuntos, a sobreposição entre os círculos pode representar a interseção dos conjuntos.</h2>
+<center><h1 style="color:Tomato;">Tabelas-Verdade:</h1></center>
+<h2>Usadas na lógica booleana para mostrar todas as combinações possíveis de valores de verdade para proposições.</h2>
+<center><img src="tabela.png"></center> 
+<center><h1 style="color:Tomato;">Árvores de Decisão:</h1></center>
+<h2>São usadas em lógica de programação e algoritmos. Cada nó representa uma condição, e os ramos representam as possíveis saídas.</h2>
+<center><h1 style="color:Tomato;">Diagrama de Fluxo:</h1></center>
+<h2>Comumente usado em programação e análise de processos. Mostra o fluxo de controle entre diferentes partes de um sistema.</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
