--- a/Estruturas lógicas.html
+++ b/Estruturas lógicas.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+        margin-right: 100px;
+       
+    }
+</style>
 <body>
-    
+<body>
+<center><h1 style="color:Tomato;">Proposições:</h1></center>
+<h2>As proposições são declarações afirmativas que podem ser classificadas como verdadeiras ou falsas. A estrutura básica inclui operadores lógicos como AND, OR e NOT.</h2>
+<center><h1 style="color:Tomato;">Argumentos:</h1></center>
+<h2>Um argumento é um conjunto de proposições em que uma (a conclusão) é afirmada com base nas outras (premissas). A estrutura lógica de um argumento é crucial para determinar sua validade.</h2>
+<center><h1 style="color:Tomato;">Tabelas-Verdade:</h1></center>
+<h2>Em lógica booleana, as tabelas-verdade mostram todas as combinações possíveis de valores de verdade para proposições e operadores lógicos.</h2>
+<center><img src="tabela 2.png"></center> 
+<center><h1 style="color:Tomato;">Implicação Lógica:</h1></center>
+<h2>A implicação lógica é uma estrutura que conecta duas proposições, geralmente na forma "se... então...".</h2>
+
+
+
 </body>
 </html>
