--- a/Sintaxe da linguagem.html
+++ b/Sintaxe da linguagem.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+        margin-right: 100px;
+       
+    }
+</style>
 <body>
-    
+    <center><h1 style="color:Tomato;">Sintaxe de Programação:</h1></center>
+<h2>A sintaxe de programação se refere às regras que definem a combinação correta de símbolos e palavras-chave em um programa de computador. Cada linguagem de programação tem sua própria sintaxe.</h2>
+    <center><h1 style="color:Tomato;">Sintaxe de Consulta de Banco de Dados:</h1></center>
+<h2>Em linguagens de consulta de banco de dados, como SQL, a sintaxe é usada para recuperar, inserir, atualizar ou excluir dados em um banco de dados. </h2>
+    <center><h1 style="color:Tomato;">Sintaxe de Linguagens de Marcação:</h1></center>
+<h2>Em linguagens de marcação, como HTML, a sintaxe é usada para estruturar o conteúdo da página.</h2>
+    <center><h1 style="color:Tomato;">Sintaxe de Expressões Regulares:</h1></center>
+<h2>Em expressões regulares, a sintaxe é usada para definir padrões de busca em strings.</h2>
+    <center><h1 style="color:Tomato;">Sintaxe de Linguagens Naturais:</h1></center>
+<h2>Em linguística, a sintaxe refere-se à estrutura das frases em uma língua. Cada língua tem suas próprias regras sintáticas.</h2>
 </body>
 </html>
